# http-epub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .windsurfrules  Cargo.toml  Dockerfile.android  Makefile  README.md  devbox.json  docker-bake.hcl  renovate.json
.cargo/: config.toml
.github/workflows/: android-release.yml  pre-commit.yml
src/: cli.rs  cover_template.html  epub.rs  extract.rs  fetch.rs  lib.rs  main.rs  template.html
