[package]
name = "http-epub"
version = "0.1.0"
edition = "2024"
description = "A tool to convert websites to EPUB format"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
html5ever = "0.31"
markup5ever_rcdom = "0.3"
select = "0.6"
url = "2.4"
epub-builder = "0.8"
anyhow = "1.0"
tempfile = "3.8"
sanitize-filename = "0.6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
mime_guess = "2.0"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
